refactor(BaseballNumbers): 팩토리 메서드 추가 convertToNumber() 메서드로 변환 후 생성자 오버라이딩 한 메서드에 넣어서 객체를 생성하는 것에서, 컨트롤러에서 사용시 의도를 알기 쉽지 않아서 팩토리 메서드로 변환.